// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plot manipulation > deletes nodes across multiple trees on one plot 1`] = `
{
  "alex": {
    "nodes": {
      "n2": {
        "label": "N",
        "offset": {
          "dTreeX": 0,
          "dTreeY": 0,
        },
        "slice": [
          0,
          4,
        ],
        "triangle": false,
      },
      "np2a": {
        "children": [
          "n2",
        ],
        "label": "NP",
        "offset": {
          "dTreeX": 0,
          "dTreeY": 0,
        },
      },
      "np2b": {
        "label": "NP",
        "offset": {
          "dTreeX": 0,
          "dTreeY": 0,
        },
        "slice": [
          11,
          18,
        ],
        "triangle": false,
      },
      "s2": {
        "children": [
          "np2a",
        ],
        "label": "S",
        "offset": {
          "dTreeX": 0,
          "dTreeY": 5,
        },
      },
      "v2": {
        "label": "V",
        "offset": {
          "dTreeX": 0,
          "dTreeY": 0,
        },
        "slice": [
          5,
          10,
        ],
        "triangle": false,
      },
    },
    "offset": {
      "dPlotX": 0,
      "dPlotY": 0,
    },
    "sentence": "Alex baked cookies.",
  },
  "cleo": {
    "nodes": {
      "n1": {
        "label": "N",
        "offset": {
          "dTreeX": 0,
          "dTreeY": 0,
        },
        "slice": [
          0,
          4,
        ],
        "triangle": false,
      },
      "vp1": {
        "label": "VP",
        "offset": {
          "dTreeX": 0,
          "dTreeY": 0,
        },
        "slice": [
          5,
          12,
        ],
        "triangle": false,
      },
    },
    "offset": {
      "dPlotX": 0,
      "dPlotY": 0,
    },
    "sentence": "Cleo laughed.",
  },
}
`;

exports[`plot manipulation > transforms nodes across multiple trees on one plot 1`] = `
{
  "alex": {
    "nodes": {
      "n2": {
        "label": "N",
        "offset": {
          "dTreeX": 0,
          "dTreeY": 0,
        },
        "slice": [
          0,
          4,
        ],
        "triangle": false,
      },
      "np2a": {
        "children": [
          "n2",
        ],
        "label": "NP",
        "offset": {
          "dTreeX": 0,
          "dTreeY": 0,
        },
      },
      "np2b": {
        "label": "NP",
        "offset": {
          "dTreeX": 0,
          "dTreeY": 0,
        },
        "slice": [
          11,
          18,
        ],
        "triangle": false,
      },
      "s2": {
        "children": [
          "np2a",
          "vp2",
        ],
        "label": "S",
        "offset": {
          "dTreeX": 0,
          "dTreeY": 1,
        },
      },
      "v2": {
        "label": "V",
        "offset": {
          "dTreeX": 0,
          "dTreeY": 0,
        },
        "slice": [
          5,
          10,
        ],
        "triangle": false,
      },
      "vp2": {
        "children": [
          "v2",
          "np2b",
        ],
        "label": "VP",
        "offset": {
          "dTreeX": 0,
          "dTreeY": 0,
        },
      },
    },
    "offset": {
      "dPlotX": 0,
      "dPlotY": 0,
    },
    "sentence": "Alex baked cookies.",
  },
  "cleo": {
    "nodes": {
      "n1": {
        "label": "N",
        "offset": {
          "dTreeX": 0,
          "dTreeY": 0,
        },
        "slice": [
          0,
          4,
        ],
        "triangle": false,
      },
      "np1": {
        "children": [
          "n1",
        ],
        "label": "NP",
        "offset": {
          "dTreeX": 0,
          "dTreeY": -4,
        },
      },
      "s1": {
        "children": [
          "np1",
          "vp1",
        ],
        "label": "S",
        "offset": {
          "dTreeX": 0,
          "dTreeY": 5,
        },
      },
      "vp1": {
        "label": "VP",
        "offset": {
          "dTreeX": 0,
          "dTreeY": 0,
        },
        "slice": [
          5,
          12,
        ],
        "triangle": false,
      },
    },
    "offset": {
      "dPlotX": 0,
      "dPlotY": 0,
    },
    "sentence": "Cleo laughed.",
  },
}
`;
